[metadata]
name=adx2wav
version = 1.0.0
author=K0lb3
url = https://github.com/K0lb3/adx2wav/
download_url = https://github.com/K0lb3/adx2wav/tarball/master
description=converts ADX to WAV
description-file = README.md
long-description = file: README.md
long_description_content_type= text/markdown
license = MIT
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Multimedia :: Sound/Audio :: Conversion


[flake8]
ignore = W191